# INLP_PROJECT

./: .gitignore  1.ipynb  batch.sh  demo.py  main.py  plot_hp_features.py  pyproject.toml  readme.md  reproducing_mid_eval_results.md  todo.txt
eval_prompts/: Completion samples baseline vs finetuned.json  step_0_completions_eval.json  step_100_completions_eval.json  step_120_completions_eval.json  step_140_completions_eval.json  step_160_completions_eval.json  step_20_completions_eval.json  step_40_completions_eval.json  step_60_completions_eval.json  step_80_completions_eval.json
results/: layer_8_eval_results.json  unified_eval_results.json  unified_eval_results_judged.json  unified_eval_results_judged_manual.json  unified_eval_results_manual.json
results/llama/: unified_eval_results_judged.json
scripts/: push_latest_llama_pt_to_hf.py
src/: helper.py
src/analysis/: diff_means.py
src/data/: preprocess.py  target_corpus.txt
src/eval/: evaluate.py  evaluate_llm_judge.py  evaluate_mmlu.py  evaluate_perplexity.py  generate_latex_table.py  plot_results.py  summarize_results.py  unified_evaluate.py
src/intervention/: hook.py
src/models/: hf_loader.py
src/sae/: checkpoints.py  model.py  train.py  trainer.py
